fix getSchematics infinite loop
